--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,12 +6,17 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px;
 }
 
 .profile-image {
@@ -45,4 +50,12 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+}
+
+.space {
+  display: flex;
+  gap: 8px;
 }
