--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -2,9 +2,37 @@
 
 body {
   height: 100vh;
-  margin: 0;
+  color: grey;
+  margin: 0px;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+
+.left-links {
+  display: flex;
+  gap: 20px;
+}
+
+.right-links {
+  display: flex;
+  gap: 20px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -25,3 +53,22 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.footer {
+  background-color: grey;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px;
+}
+
