--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,10 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  border: 1px solid red;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template: 0.5fr 0.4fr 5fr 0.2fr/1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,26 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(1,1fr);
+  grid-area: 1/1/2/3;
+  text-align: left;
+  gap: 100px;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2/1/4/2;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -46,6 +61,16 @@
 
 .nav {
   background-color: #FF7755;
+  grid-area: 2/2/3/3;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
 
 .nav ul li {
@@ -55,6 +80,10 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: 3/2/4/3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +97,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +113,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4/1/5/3;
 }
 
 .footer p {
